--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
 <!-- ................................................... NEWS BEGIN .................................................... -->
 
-<div class="section color-2">
+<!-- <div class="section color-2">
     <div class="section-container">
         <div class="title text-center">
             <h3>Colaborations</h3>
@@ -297,12 +297,12 @@ function carousel() {
     x[myIndex-1].enabled = "true";
     setTimeout(carousel, 2000); // Change image every 2 seconds
 }
-</script>
+</script> -->
 
 <!-- ................................................... NEWS END .................................................... -->
 
 
-                    <!-- <div class="pagecontents">
+                    <div class="pagecontents">
                         <div class="section color-1">
                             <div class="section-container">
                                 <div class="row">
@@ -498,7 +498,7 @@ function carousel() {
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
 
 
