News section is added

--- a/index.html
+++ b/index.html
@@ -195,83 +195,52 @@
 
 <!-- ................................................... NEWS BEGIN .................................................... -->
 
-<!-- <div class="section color-2">
+<div class="section color-2">
     <div class="section-container">
         <div class="title text-center">
-            <h3>Colaborations</h3>
+            <h3>News</h3>
         </div>
         <div class="row">
             <div class="col-md-12">
 
-                <div id="labp-heads-wrap">
+                <div id="labn-heads-wrap">
 
-                    <div id="lab-carousel">
-                        <div><img alt="image" src="img/research/koroush.jpg" width="120" height="120" class="img-circle lab-img" /></div>
-                        <div><img alt="image" src="img/research/soltan.jpg" width="120" height="120" class="img-circle lab-img" /></div>
-                        <div><img alt="image" src="img/research/basti.jpg" width="120" height="120" class="img-circle lab-img" /></div>
-                        <div><img alt="image" src="img/research/red.jpg" width="120" height="120" class="img-circle lab-img" /></div>
-                        <div><img alt="image" src="img/research/Smida.png" width="120" height="120" class="img-circle lab-img" /></div>
-                        <div><img alt="image" src="img/research/heather.jpg" width="120" height="120" class="img-circle lab-img" /></div>
-                        <div><img alt="image" src="img/research/david.jpg" width="120" height="120" class="img-circle lab-img" /></div>
-                        <div><img alt="image" src="img/research/azarakhsh.png" width="120" height="120" class="img-circle lab-img" /></div>
+                    <div id="labn-carousel">
+                        <div><img alt="image" src="img/news/radpiper_newsherald.jpg" width="240" height="120" class="img-rounded lab-img" /></div>
+                        <div><img alt="image" src="img/news/radpiper_usnews.jpg" width="240" height="120" class="img-rounded lab-img" /></div>
+                        <div><img alt="image" src="img/news/radpiper_triblive.jpeg" width="240" height="120" class="img-rounded lab-img" /></div>
+                        <div><img alt="image" src="img/news/radpiper_cmu.jpeg" width="240" height="120" class="img-rounded lab-img" /></div>
+
 
                     </div>
                     <div>
-                        <a href="#" id="prev"><i class="icon-chevron-sign-left"></i></a>
-                        <a href="#" id="next"><i class="icon-chevron-sign-right"></i></a>
+                        <a href="#" id="prevn"><i class="icon-chevron-sign-left"></i></a>
+                        <a href="#" id="nextn"><i class="icon-chevron-sign-right"></i></a>
                     </div>
                 </div>
 
-                <div id="lab-details">
+                <div id="labn-details">
 
                     <div>
-                        <h3>Kourosh Sartipi</h3>
-                        <h4>Researcher</h4>
-                        <h5>Google</h5>
-                        <a href="#" class="btn btn-info">+ Follow</a>
+                        <h3>News Herald</h3>
+                        <h4>Robot in Ohio designed for faster, safer uranium plant pipe cleanup</h4>
+                        <a href="https://www.news-herald.com/news/ohio/robot-in-ohio-designed-for-faster-safer-uranium-plant-pipe/article_f1b5ab48-7af6-5da1-aae1-e85b7ef6e317.html" class="btn btn-info">+ Link</a>
                     </div>
                     <div>
-                        <h3>Mojtaba Soltanalian</h3>
-                        <h4>Assistant Professor</h4>
-                        <h5>University of Illinois at Chicago</h5>
-                        <a href="#" class="btn btn-info">+ Follow</a>
+                        <h3>U.S.News</h3>
+                        <h4>Robot Designed for Faster, Safer Uranium Plant Pipe Cleanup</h4>
+                        <a href="https://www.usnews.com/news/best-states/ohio/articles/2018-04-21/robot-designed-for-faster-safer-uranium-plant-pipe-cleanup" class="btn btn-info">+ Link</a>
                     </div>
                     <div>
-                        <h3>Sebastian Scherer</h3>
-                        <h4>Research Advisor, Senior Systems Scientist</h4>
-                        <h5>Carnegie Mellon University</h5>
-                        <a href="https://www.ri.cmu.edu/ri-faculty/sebastian-scherer/" class="btn btn-info">+ Follow</a>
+                        <h3>Trib Live</h3>
+                        <h4>Get an up-close look at Carnegie Mellon University's RadPiper robot</h4>
+                        <a href="https://triblive.com/business/technology/13616048-74/get-an-up-close-look-at-carnegie-mellon-universitys-radpiper-robot" class="btn btn-info">+ Link</a>
                     </div>
 
                     <div>
-                        <h3>William (Red) L. Whittaker</h3>
-                        <h4>Research Advisor, Professor</h4>
-                        <h5>Carnegie Mellon University</h5>
-                        <a href="https://www.ri.cmu.edu/ri-faculty/william-red-l-whittaker/" class="btn btn-info">+ Follow</a>
-                    </div>
-                    <div>
-                        <h3>Besma Smida</h3>
-                        <h4>Master's Advisor, Associate Professor</h4>
-                        <h5>University of Illinois at Chicago</h5>
-                        <a href="http://smida.people.uic.edu/" class="btn btn-info">+ Follow</a>
-                    </div>
-                    <div>
-                        <h3>Heather Jones</h3>
-                        <h4>Senior Scientist</h4>
-                        <h5>Carnegie Mellon University</h5>
-                        <a href="https://www.ri.cmu.edu/ri-people/heather-jones/" class="btn btn-info">+ Follow</a>
-                    </div>
-                    <div>
-                        <h3>David Kohanbash</h3>
-                        <h4>Senior Research Programmer</h4>
-                        <h5>Carnegie Mellon University</h5>
-                        <a href="https://www.ri.cmu.edu/ri-people/david-kohanbash/" class="btn btn-info">+ Follow</a>
-                    </div>
-                    <div>
-                        <h3>Azarakhsh Keipour</h3>
-                        <h4>PhD Student</h4>
-                        <h5>Carnegie Mellon University</h5>
-                        <a href="#" class="btn btn-info">+ Follow</a>
+                        <h3>CMU SCS News</h3>
+                        <h4>Pipe-Crawling Robot Will Help Decommission DOE Nuclear Facility</h4>
+                        <a href="https://www.scs.cmu.edu/news/pipe-crawling-robot-will-help-decommission-doe-nuclear-facility" class="btn btn-info">+ Link</a>
                     </div>
 
                 </div>
@@ -282,7 +251,7 @@
 </div>
 
 
-<script>
+<!-- <script>
 var myIndex = 0;
 carousel();
 
