News section updated

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 <div class="section color-2">
     <div class="section-container">
         <div class="title text-center">
-            <h3>News</h3>
+            <h3>Media Appearance</h3>
         </div>
         <div class="row">
             <div class="col-md-12">
@@ -206,10 +206,10 @@
                 <div id="labn-heads-wrap">
 
                     <div id="labn-carousel">
-                        <div><img alt="image" src="img/news/radpiper_newsherald.jpg" width="240" height="120" class="img-rounded lab-img" /></div>
-                        <div><img alt="image" src="img/news/radpiper_usnews.jpg" width="240" height="120" class="img-rounded lab-img" /></div>
-                        <div><img alt="image" src="img/news/radpiper_triblive.jpeg" width="240" height="120" class="img-rounded lab-img" /></div>
-                        <div><img alt="image" src="img/news/radpiper_cmu.jpeg" width="240" height="120" class="img-rounded lab-img" /></div>
+                        <div><img alt="image" src="img/news/radpiper_newsherald_logo.jpg" width="240" height="120" class="img-rounded lab-img" /></div>
+                        <div><img alt="image" src="img/news/radpiper_usnews_logo.jpg" width="240" height="120" class="img-rounded lab-img" /></div>
+                        <div><img alt="image" src="img/news/radpiper_triblive_logo.jpeg" width="240" height="120" class="img-rounded lab-img" /></div>
+                        <div><img alt="image" src="img/news/radpiper_cmu_logo.jpeg" width="240" height="120" class="img-rounded lab-img" /></div>
 
 
                     </div>
