clickable news images

--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
                 <div id="labn-heads-wrap">
 
                     <div id="labn-carousel">
-                        <div><img alt="image" src="img/news/radpiper_newsherald_logo.jpg" width="240" height="120" class="img-rounded lab-img" /></div>
-                        <div><img alt="image" src="img/news/radpiper_usnews_logo.jpg" width="240" height="120" class="img-rounded lab-img" /></div>
-                        <div><img alt="image" src="img/news/radpiper_triblive_logo.jpeg" width="240" height="120" class="img-rounded lab-img" /></div>
-                        <div><img alt="image" src="img/news/radpiper_cmu_logo.jpeg" width="240" height="120" class="img-rounded lab-img" /></div>
+                        <div><a href="https://www.news-herald.com/news/ohio/robot-in-ohio-designed-for-faster-safer-uranium-plant-pipe/article_f1b5ab48-7af6-5da1-aae1-e85b7ef6e317.html"><img alt="image" src="img/news/radpiper_newsherald_logo.jpg" width="240" height="120" class="img-rounded lab-img" /></a></div>
+                        <div><a href="https://www.usnews.com/news/best-states/ohio/articles/2018-04-21/robot-designed-for-faster-safer-uranium-plant-pipe-cleanup"><img alt="image" src="img/news/radpiper_usnews_logo.jpg" width="240" height="120" class="img-rounded lab-img" /></a></div>
+                        <div><a href="https://triblive.com/business/technology/13616048-74/get-an-up-close-look-at-carnegie-mellon-universitys-radpiper-robot"><img alt="image" src="img/news/radpiper_triblive_logo.jpeg" width="240" height="120" class="img-rounded lab-img" /></a></div>
+                        <div><a href="https://www.scs.cmu.edu/news/pipe-crawling-robot-will-help-decommission-doe-nuclear-facility"><img alt="image" src="img/news/radpiper_cmu_logo.jpeg" width="240" height="120" class="img-rounded lab-img" /></a></div>
 
 
                     </div>
