--- a/index.html
+++ b/index.html
@@ -282,8 +282,18 @@ function carousel() {
                                         <ul class="ul-card">
                                             <li>
                                                 <div class="dy">
-                                                    <span class="degree">2017</span>
+                                                    <span class="degree">2019</span>
                                                     <span class="year">Present</span>
+                                                </div>
+                                                <div class="description">
+                                                    <p class="waht">Research Engineer</p>
+                                                    <p class="where">Near Earth Autonomy</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="dy">
+                                                    <span class="degree">2017</span>
+                                                    <span class="year">2019</span>
                                                 </div>
                                                 <div class="description">
                                                     <p class="waht">Research Associate</p>
@@ -328,10 +338,19 @@ function carousel() {
 
                                             <li>
                                                 <div class="dy">
+                                                    <span class="degree">Ph.D</span><span class="year">2019</span>
+                                                </div>
+                                                <div class="description">
+                                                    <p class="waht">The Robotics Institute, School of Computer Science</p>
+                                                    <p class="where">Carnegie Mellon University, Chicago, IL</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="dy">
                                                     <span class="degree">M.Sc</span><span class="year">2017</span>
                                                 </div>
                                                 <div class="description">
-                                                    <p class="waht">Master of Science in Electrical Engineering</p>
+                                                    <p class="waht">Department of Electrical and Computer Engineering, School of Engineering</p>
                                                     <p class="where">University of Illinois at Chicago, Chicago, IL</p>
                                                 </div>
                                             </li>
@@ -340,7 +359,7 @@ function carousel() {
                                                     <span class="degree">B.Sc</span><span class="year">2015</span>
                                                 </div>
                                                 <div class="description">
-                                                    <p class="waht">Bachelor of Science in Electrical Engineering</p>
+                                                    <p class="waht">Department of Electrical and Computer Engineering (ECE)</p>
                                                     <p class="where">Shahid Beheshti University, Tehran, Iran</p>
                                                 </div>
                                             </li>
@@ -362,6 +381,18 @@ function carousel() {
                                         <ul class="timeline">
 
                                             <li class="open">
+                                                <div class="date">2019</div>
+                                                <div class="circle"></div>
+                                                <div class="data">
+                                                    <div class="subject">Best Paper Award in 2019 Waste Management Symposia</div>
+                                                    <div class="text row">
+                                                        <div class="col-md-12">
+                                                            <h4>Rewarded to the paper "Automated Analysis, Reporting, and Archiving for Robotic Nondestructive Assay of Holdup Deposits"</h4>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li>
                                                 <div class="date">2016</div>
                                                 <div class="circle"></div>
                                                 <div class="data">
