--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <div class="portrate hidden-xs"></div>
                             <div class="title">
                                 <h3>Mohammadreza Mousaei</h3>
-                                <h3><span style="font-size:14px">Research Associate</span></h3>
+                                <h3><span style="font-size:14px">Ph.D Student</span></h3>
                                 <h3><span style="font-size:14px">Carnegie Mellon University</span></h3>
                             </div>
 
@@ -160,7 +160,7 @@
 
                                                 <h1 class="">Mohammadreza Mousaei</h1>
                                                 <ul class="list-unstyled">
-                                                    <li>Research Associate</li>
+                                                    <li>Ph.D Student</li>
 									                <li>Field Robotics Center</li>
                                                     <li>The Robotics Institute</li>
                                                     <li>Carnegie Mellon University</li>
@@ -177,10 +177,10 @@
 
 
                                        <p>
-                                        I am a Robotics Geek and a Research Associate at <a href="https://www.ri.cmu.edu/">Carnegie Mellon University</a>, in that order. My work is focused on Robot Autonomy, more specifically, Lidar based 3D perception, Localization, SLAM.
+                                        I am a Robotics Geek and a Ph.D student at <a href="https://www.ri.cmu.edu/">Carnegie Mellon University</a>, in that order. My work is focused on Robot Autonomy, more specifically, Lidar based 3D perception, Localization, SLAM.
                                       </p>
                                       <p>
-                                        Born and raised in Tehran, Iran, fascinated by the world of science and technology. Traveling is my motivation through busy periods of working. Playing Guitar and listening to all kind of music (more specifically, Classical Rock) are my favorite activity at my spare time. I received my B.Sc. in Electrical Engineering from <a href="http://en.sbu.ac.ir/sitepages/home.aspx">Shahid Beheshti University</a>. Thereafter, I worked at <a href="http://www.sharif.ir/web/en/">Sharif University of Technology</a> and <a href="http://aut.ac.ir/aut/">Amirkabir University of Technology</a> as an assistant before moving to U.S. to start my M.Sc. in Electrical Engineering at <a href="http://www.uic.edu"> University of Illinois at Chicago</a>. Then I joined <a href="http://www.frc.ri.cmu.edu/">Field Robotics Center</a> of <a href="https://www.ri.cmu.edu/">Carnegie Mellon University</a> as a Research Associate under supervision of Prof. <a href="https://www.ri.cmu.edu/ri-faculty/william-red-l-whittaker/">William (Red) L. Whittaker</a> and Dr. <a href="https://www.ri.cmu.edu/ri-faculty/sebastian-scherer/">Sebastian Scherer</a>.
+                                        Born and raised in Tehran, Iran, fascinated by the world of science and technology. Traveling is my motivation through busy periods of working. Playing Guitar and listening to all kind of music (more specifically, Classical Rock) are my favorite activity at my spare time. I received my B.Sc. in Electrical Engineering from <a href="http://en.sbu.ac.ir/sitepages/home.aspx">Shahid Beheshti University</a>. Thereafter, I worked at <a href="http://www.sharif.ir/web/en/">Sharif University of Technology</a> and <a href="http://aut.ac.ir/aut/">Amirkabir University of Technology</a> as an assistant before moving to U.S. to start my M.Sc. in Electrical Engineering at <a href="http://www.uic.edu"> University of Illinois at Chicago</a>. Then I joined <a href="http://www.frc.ri.cmu.edu/">Field Robotics Center</a> of <a href="https://www.ri.cmu.edu/">Carnegie Mellon University</a> as a Research Associate under supervision of Prof. <a href="https://www.ri.cmu.edu/ri-faculty/william-red-l-whittaker/">William (Red) L. Whittaker</a> and Dr. <a href="https://www.ri.cmu.edu/ri-faculty/sebastian-scherer/">Sebastian Scherer</a>. Then after a year of working in industry, I rejoined <a href="https://www.ri.cmu.edu/">Carnegie Mellon University</a> as a Ph.D student.
                                       </p>
                                       <p>
                                         My research interests includes Robot Autonomy, sampling and graph based Planning, 3D Lidar based Perception, Localization, SLAM, Computer Vison, Machine Learning as well as Information Theory and Wireless Communication. To see my full academic profile, you can download my <a href="cv/resume.pdf">CV</a> or visit my <a href="https://scholar.google.com/citations?user=VbPu36oAAAAJ&hl=en&oi=ao">Google Scholar</a> profile.
@@ -338,11 +338,11 @@ function carousel() {
 
                                             <li>
                                                 <div class="dy">
-                                                    <span class="degree">Ph.D</span><span class="year">2019</span>
+                                                    <span class="degree">Ph.D</span><span class="year">Present</span>
                                                 </div>
                                                 <div class="description">
                                                     <p class="waht">The Robotics Institute, School of Computer Science</p>
-                                                    <p class="where">Carnegie Mellon University, Chicago, IL</p>
+                                                    <p class="where">Carnegie Mellon University, Pittsburgh, PA</p>
                                                 </div>
                                             </li>
                                             <li>
