--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
                                         I am a Robotics Geek and a Ph.D student at <a href="https://www.ri.cmu.edu/">Carnegie Mellon University</a>, in that order. My work is focused on Robot Autonomy, more specifically, Lidar based 3D perception, Localization, SLAM.
                                       </p>
                                       <p>
-                                        Born and raised in Tehran, Iran, fascinated by the world of science and technology. Traveling is my motivation through busy periods of working. Playing Guitar and listening to all kind of music (more specifically, Classical Rock) are my favorite activity at my spare time. I received my B.Sc. in Electrical Engineering from <a href="http://en.sbu.ac.ir/sitepages/home.aspx">Shahid Beheshti University</a>. Thereafter, I worked at <a href="http://www.sharif.ir/web/en/">Sharif University of Technology</a> and <a href="http://aut.ac.ir/aut/">Amirkabir University of Technology</a> as an assistant before moving to U.S. to start my M.Sc. in Electrical Engineering at <a href="http://www.uic.edu"> University of Illinois at Chicago</a>. Then I joined <a href="http://www.frc.ri.cmu.edu/">Field Robotics Center</a> of <a href="https://www.ri.cmu.edu/">Carnegie Mellon University</a> as a Research Associate under supervision of Prof. <a href="https://www.ri.cmu.edu/ri-faculty/william-red-l-whittaker/">William (Red) L. Whittaker</a> and Dr. <a href="https://www.ri.cmu.edu/ri-faculty/sebastian-scherer/">Sebastian Scherer</a>. Then after a year of working in industry, I rejoined <a href="https://www.ri.cmu.edu/">Carnegie Mellon University</a> as a Ph.D student.
+                                        Born and raised in Tehran, Iran, fascinated by the world of science and technology. Traveling is my motivation through busy periods of working. Playing Guitar and listening to all kind of music (more specifically, Classical Rock) are my favorite activity at my spare time. I received my B.Sc. in Electrical Engineering from <a href="http://en.sbu.ac.ir/sitepages/home.aspx">Shahid Beheshti University</a>. Thereafter, I worked at <a href="http://www.sharif.ir/web/en/">Sharif University of Technology</a> and <a href="http://aut.ac.ir/aut/">Amirkabir University of Technology</a> as an assistant before moving to U.S. to start my M.Sc. in Electrical Engineering at <a href="http://www.uic.edu"> University of Illinois at Chicago</a>. Then I joined <a href="http://www.frc.ri.cmu.edu/">Field Robotics Center</a> of <a href="https://www.ri.cmu.edu/">Carnegie Mellon University</a> as a Research Associate under supervision of Prof. <a href="https://www.ri.cmu.edu/ri-faculty/william-red-l-whittaker/">William (Red) L. Whittaker</a> and Dr. <a href="https://www.ri.cmu.edu/ri-faculty/sebastian-scherer/">Sebastian Scherer</a>. Then after a year of working at industry, I rejoined <a href="https://www.ri.cmu.edu/">Carnegie Mellon University</a> as a Ph.D student.
                                       </p>
                                       <p>
-                                        My research interests includes Robot Autonomy, sampling and graph based Planning, 3D Lidar based Perception, Localization, SLAM, Computer Vison, Machine Learning as well as Information Theory and Wireless Communication. To see my full academic profile, you can download my <a href="cv/resume.pdf">CV</a> or visit my <a href="https://scholar.google.com/citations?user=VbPu36oAAAAJ&hl=en&oi=ao">Google Scholar</a> profile.
+                                        My research interests includes Robot Autonomy, sampling and graph based Planning, 3D Lidar based Perception, Localization, SLAM, Computer Vison, Machine Learning as well as Information Theory and Wireless Communication. To see my full academic profile, you can download my <a href="cv/resume.pdf">CV</a> or visit my <a href="https://scholar.google.com/citations?user=L9YqxGcAAAAJ&hl=en&oi=ao">Google Scholar</a> profile.
                                       </p>
 
                                     </div>
@@ -341,8 +341,8 @@ function carousel() {
                                                     <span class="degree">Ph.D</span><span class="year">Present</span>
                                                 </div>
                                                 <div class="description">
-                                                    <p class="waht">The Robotics Institute, School of Computer Science</p>
-                                                    <p class="where">Carnegie Mellon University, Pittsburgh, PA</p>
+                                                    <p class="waht">Carnegie Mellon University</p>
+                                                    <p class="where">The Robotics Institute, School of Computer Science, Pittsburgh, PA</p>
                                                 </div>
                                             </li>
                                             <li>
@@ -350,8 +350,8 @@ function carousel() {
                                                     <span class="degree">M.Sc</span><span class="year">2017</span>
                                                 </div>
                                                 <div class="description">
-                                                    <p class="waht">Department of Electrical and Computer Engineering, School of Engineering</p>
-                                                    <p class="where">University of Illinois at Chicago, Chicago, IL</p>
+                                                    <p class="waht">University of Illinois at Chicago</p>
+                                                    <p class="where">Department of Electrical and Computer Engineering, School of Engineering, Chicago, IL</p>
                                                 </div>
                                             </li>
                                             <li>
@@ -359,8 +359,8 @@ function carousel() {
                                                     <span class="degree">B.Sc</span><span class="year">2015</span>
                                                 </div>
                                                 <div class="description">
-                                                    <p class="waht">Department of Electrical and Computer Engineering (ECE)</p>
-                                                    <p class="where">Shahid Beheshti University, Tehran, Iran</p>
+                                                    <p class="waht">Shahid Beheshti University</p>
+                                                    <p class="where">Department of Electrical and Computer Engineering (ECE), Tehran, Iran</p>
                                                 </div>
                                             </li>
                                         </ul>
