--- a/index.html
+++ b/index.html
@@ -1609,12 +1609,10 @@ function carousel() {
         </div>
 
 
-<a title="Real Time Analytics" href="http://clicky.com/101110839"><img alt="Real Time Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
-<script src="//static.getclicky.com/js" type="text/javascript"></script>
-<script type="text/javascript">try{ clicky.init(101110839); }catch(e){}</script>
-<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101110839ns.gif" /></p></noscript>
-
-
+        <a title="Real Time Web Analytics" href="http://clicky.com/101197447"><img src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+        <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101197447);</script>
+        <script async src="//static.getclicky.com/js"></script>
+        <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101197447ns.gif" /></p></noscript>
 
 
 
